<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instrumentNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/instrument_creality_cr10"
        android:layout_gravity="center_horizontal"
        />
    
    <ImageView
        android:id="@+id/crealitycr10"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/creality_cr10"/>

    <TextView
        android:id="@+id/instrumentDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_creality_cr10"
        android:padding="20dp"/>

    <Button
        android:id="@+id/bookInstrumentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/availability_button"
        android:padding="10dp"/>

    <Button
        android:id="@+id/viewHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instrument_history"
        android:padding="10dp"/>

    <Button
        android:id="@+id/resourcesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instrument_resources"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/dklablogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|right"
        android:cropToPadding="false"
        android:src="@drawable/dk_lab_logo_2018" />
</LinearLayout>